name:                darkplaces-text
version:             0.1
synopsis:            DarkPlaces text parser and utils
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Game
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     DarkPlaces.Text
  other-modules:       DarkPlaces.Text.Lexer,
                       DarkPlaces.Text.Chars
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.8,
                       bytestring >=0.10 && <0.11,
                       array,
                       text >=1.0,
                       vector >=0.10

  build-tools:         alex
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-text
