name:                darkplaces-text
version:             0.3.1
license:             GPL-2
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
homepage:            https://github.com/bacher09/darkplaces-text
bug-reports:         https://github.com/bacher09/darkplaces-text/issues
category:            Game
build-type:          Simple
copyright:           (c) Slava Bacherikov 2015
cabal-version:       >=1.10
stability:           alpha
synopsis:            Parser for darkplaces colorful text
description:

  This package supports parsing and displaying darkplaces colorfull text.
  Darkplaces text may contains special color tags and unicode glyphs
  that are unique for darkplaces fonts.

library
  exposed-modules:     DarkPlaces.Text,
                       DarkPlaces.Text.Types

  other-modules:       DarkPlaces.Text.Classes,
                       DarkPlaces.Text.Lexer,
                       DarkPlaces.Text.Chars,
                       DarkPlaces.Text.Colors

  build-depends:       base >=4.7 && <5,
                       bytestring >=0.11 && <0.12,
                       attoparsec >= 0.14,
                       array,
                       text >=1.0 && <2.0,
                       utf8-string >=1.0,
                       vector >=0.12,
                       ansi-terminal >=0.11,
                       conduit >= 1.3 && < 1.4,
                       conduit-extra,
                       exceptions,
                       transformers

  hs-source-dirs:      src
  default-language:    Haskell2010
  other-extensions:    OverloadedStrings,
                       RankNTypes,
                       FlexibleInstances

  ghc-options:         -O2 -funbox-strict-fields -Wall -fno-warn-name-shadowing

test-suite tests
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs
  other-modules:       DarkPlaces.TextSpec

  build-depends:       base >=4.7 && <5,
                       bytestring >=0.11 && <0.12,
                       darkplaces-text,
                       QuickCheck >= 2.5,
                       hspec,
                       conduit >= 1.3 && < 1.4,
                       conduit-extra,
                       transformers

  build-tool-depends:  hspec-discover:hspec-discover -any
  other-extensions:    OverloadedStrings, FlexibleInstances, RankNTypes

source-repository head
  type:                git
  location:            https://github.com/bacher09/darkplaces-text.git
